<resources>
    <string name="app_name">onrequest</string>
    <string name="TapToStart">TAP TO START</string>
    <string name="ID">ID</string>
    <string name="PAassword">Password</string>
    <string name="submit">Submit</string>
    <string name="table_1">Table 1</string>
    <string name="table_2">Table 2</string>
    <string name="table_3">Table 3</string>
    <string name="table_4">Table 4</string>
    <string name="table_5">Table 5</string>
    <string name="table_6">Table 6</string>
    <string name="menu">Menu</string>
    <string name="forgotpass">Forgot Your Password ?</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="AddMoreTables">Add more Tables...</string>
    <string name="imageViewAvatar">Avatar</string>
    <string name="textviewdrink">Drink</string>
    <string name="textviewfood">Food</string>
    <string name="products">Products</string>
    <string name="createaccount">Create Account</string>
    <string name="Password">Password</string>
    <string name="email">Email</string>
    <string name="id2">ID</string>
    <string name="create">Create</string>
    <string name="total">Total:</string>
</resources>