<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TablesActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="273dp"
        android:layout_height="288dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/aguarela_restaurant_high_resolution_logo_black_on_transparent_background"
        tools:ignore="ContentDescription,MissingConstraints" />

    <Button
        android:id="@+id/table1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="#070707"
        android:onClick="table1"
        android:text="@string/table_1"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/table2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="#000000"
        android:onClick="table2"
        android:text="@string/table_2"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/table3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#000000"
        android:onClick="table3"
        android:text="@string/table_3"
        app:layout_constraintEnd_toEndOf="@+id/table1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/table1"
        app:layout_constraintTop_toBottomOf="@+id/table1" />

    <Button
        android:id="@+id/table4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#0B0A0A"
        android:onClick="table4"
        android:text="@string/table_4"
        app:layout_constraintEnd_toEndOf="@+id/table2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/table2"
        app:layout_constraintTop_toBottomOf="@+id/table2" />

    <Button
        android:id="@+id/table5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#0E0E0E"
        android:onClick="table5"
        android:text="@string/table_5"
        app:layout_constraintEnd_toEndOf="@+id/table3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/table3"
        app:layout_constraintTop_toBottomOf="@+id/table3" />

    <Button
        android:id="@+id/table6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#0C0C0C"
        android:onClick="table6"
        android:text="@string/table_6"
        app:layout_constraintEnd_toEndOf="@+id/table4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/table4"
        app:layout_constraintTop_toBottomOf="@+id/table4" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="410dp"
        android:layout_height="72dp"
        android:layout_marginTop="328dp"
        android:layout_marginBottom="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/table6"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/table5"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:menu="@menu/bottom_navigation_bar" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/AddMoreTables"
        android:textIsSelectable="false"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/table6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/table6"
        app:layout_constraintTop_toBottomOf="@+id/table6" />
</androidx.constraintlayout.widget.ConstraintLayout>